--- a/src/fragments/forms/map-form/components/optimization/components/optimization-details/components/optimization-steps/optimization-steps.css
+++ b/src/fragments/forms/map-form/components/optimization/components/optimization-details/components/optimization-steps/optimization-steps.css
@@ -5,6 +5,11 @@
   padding-left: 10px;
 }
 
+.step:last-child {
+  padding-bottom: 0;
+  margin-bottom: 0;
+}
+
 .instruction {
   font-size: 16px;
   margin-bottom: 8px;
