--- a/src/fragments/forms/map-form/components/optimization/optimization.css
+++ b/src/fragments/forms/map-form/components/optimization/optimization.css
@@ -4,10 +4,10 @@
   font-weight: bold;
 }
 
-ul.place-inputs li {
+ul.job-inputs li {
   list-style: none;
 }
 
-ul.place-inputs {
+ul.job-inputs {
   padding: 10px 0;
 }
