--- a/src/fragments/forms/map-form/components/optimization/optimization.css
+++ b/src/fragments/forms/map-form/components/optimization/optimization.css
@@ -11,3 +11,17 @@ ul.job-inputs li {
 ul.job-inputs {
   padding: 10px 0;
 }
+
+.skill-opt-btn {
+  float: left;
+  margin-left: 10px;
+  margin-right: 10px;
+  margin-top: 3px
+}
+.skill-btn-legend {
+  font-size: 9px;
+  text-align: center;
+  word-break: break-word;
+  max-width: 58px;
+  margin-left: 0;
+}
